Backend/Syntax/cfg.txt
XI.  CONTEXT FREE GRAMMAR
1
<program> → <boundaries_opt> <global_declaration> <sub_func> love() { <body_func> }
2
<boundaries_opt> → boundaries id { <global_declaration> <sub func> }
3
<boundaries_opt> → λ
4
<global_declaration> → <declaration> <global_declaration>
5
<global_declaration> → λ
6
<sub_func> → <return_type> id (<parameter>) { <body_func> } <sub_func>
7
<sub_func> → avoidant id (<parameter>) { <body_func> } <sub_func>
8
<sub_func> → λ
9
<declaration> → <data_type> id <array_decl> <var_initial> <multi_decl>;
10
<declaration> → <data_type> id;
11
<declaration> → <const_decl> <data_type> id = <expr> ;
12
<multi_decl> → , id <array_decl> <var_initial> <multi_decl>
13
<multi_decl> → λ
14
<const_decl> → const
15
<const_decl> → λ
16
<var_initial> → = <expr>
17
<var_initial> → = <init_value>
18
<var_initial> → λ
19
<init_value> → <expr>
20
<init_value> → { <array_lit_list> }
21
<array_lit_list> → <init_value> <more_array_lit>
22
<more_array_lit> → , <init_value> <more_array_lit>
23
<more_array_lit> → λ
24
<data_type> → dear
25
<data_type> → dearest
26
<data_type> → rant
27
<data_type> → status
28
<return_type> → <data_type>
29
<parameter> → <function_parameter> <multi_parameter>
30
<parameter> → λ
31
<function_parameter> → <data_type> id <array_decl>
32
<multi_parameter> → , <function_parameter> <multi_parameter>
33
<multi_parameter> → λ
34
<body_func> → <local_decl_list> <statements>
35
<local_decl_list> → <local_decl> <local_decl_list>
36
<local_decl_list> → λ
37
<local_decl> → <data_type> id <array_decl> <var_initial> <multi_decl>;
38
<statements> → id <id_suffix> <statements>
39
<statements> → <input_state> <statements>
40
<statements> → <output_state> <statements>
41
<statements> → <conditional_state> <statements>
42
<statements> → <loop_state> <statements>
43
<statements> → <comeback_state> <statements>
44
<statements> → <choose_state> <statements>
45
<statements> → <unary_state> <statements>
46
<statements> → λ
47
<id_suffix> → <index_array> <assign_ops> <assign_values>;
48
<id_suffix> → <assign_ops> <assign_values> ;
49
<id_suffix> → (<arguments>);
50
<id_suffix> → <unary_ops> ;
51
<unary_state> → <unary_ops> id;
52
<unary_ops> → ++
53
<unary_ops> → --
54
<arguments> → <expr> <more_arguments>
55
<arguments> → λ
56
<more_arguments> → , <expr> <more_arguments>
57
<more_arguments> → λ
58
<assign_ops> → =
59
<assign_ops> → +=
60
<assign_ops> → -=
61
<assign_ops> → *=
62
<assign_ops> → /=
63
<assign_ops> → %=
64
<assign_values> → <expr>
65
<input_state> → give >> id;
66
<input_state> → overshare (id);
67
<output_state> → express <more_output>;
68
<more_output> → << <output_values> <more_output>
69
<more_output> → << <output_values>
70
<output_values> → <expr>
71
<output_values> → periodt
72
<comeback_state> → comeback <expr_opt>;
73
<expr> → <log_expr>
74
<expr_opt> → <expr>
75
<expr_opt> → λ
76
<expr_ar> → <term> <expr_next>
77
<expr_next> → + <term> <expr_next>
78
<expr_next> → - <term> <expr_next>
79
<expr_next> → λ
80
<term> → <factor> <term_next>
81
<term_next> → * <factor> <term_next>
82
<term_next> → / <factor> <term_next>
83
<term_next> → % <factor> <term_next>
84
<term_next> → λ
85
<factor> → (<expr>)
86
<factor> → id
87
<factor> → dear_lit
88
<factor> → dearest_lit
89
<factor> → rant_lit
90
<factor> → <status_lit>
91
<status_lit> → greenflag
92
<status_lit> → redflag
93
<factor> → <func_call>
94
<rel_expr> → <expr_ar> <rel_next>
95
<rel_next> → <rel_op> <expr_ar> <rel_next>
96
<rel_next> → λ
97
<rel_op> → ==
98
<rel_op> → !=
99
<rel_op> → <
100
<rel_op> → <=
101
<rel_op> → >
102
<rel_op> → >=
103
<log_expr> → <and_expr> <log_next>
104
<log_next> → || <and_expr> <log_next>
105
<log_next> → λ
106
<and_expr> → <rel_expr> <and_next>
107
<and_next> → && <rel_expr> <and_next>
108
<and_next> → λ
109
<conditional_state> → forever (<expr>) { <body_func> } <forevermore_lst> <more_opt>
110
<forevermore_lst> → forevermore (<expr>) { <body_func> } <forevermore_lst>
111
<forevermore_lst> → λ
112
<more_opt> → more { <body_func> }
113
<more_opt> → λ
114
<loop_state> → <pursue_stmt>
115
<loop_state> → <while_stmt>
116
<loop_state> → <for_stmt>
117
<pursue_stmt> → pursue (<expr>) { <body_func> }
118
<while_stmt> → while (<expr>) { <body_func> }
119
<for_stmt> → for (<for_init>; <expr>; <for_ud>) { <body_func> }
120
<for_init> → <data_type> id = <expr>
121
<for_init> → id = <expr>
122
<for_ud> → id <assign_ops> <expr>
123
<for_ud> → id <unary_ops>
124
<for_ud> → <unary_ops> id
125
<choose_state> → choose (<expr>) { <phase_lst> <bareminimum_opt> }
126
<phase_lst> → phase <choose_const> : <body_func> breakup; <phase_lst_next>
127
<phase_lst_next> → <phase_lst>
128
<phase_lst_next> → λ
129
<choose_const> → num_lit
130
<choose_const> → string_lit
131
<bareminimum_opt> → bareminimum: <body_func> breakup;
132
<bareminimum_opt> → λ
133
<func_call> → id <boundaries_suffix> (<arguments>)
134
<boundaries_suffix> → :: id
135
<boundaries_suffix> → λ
136
<array_decl> → [] <array_decl>
137
<array_decl> → λ
138
<index_array> → [<expr_ar>] <index_array>
139
<index_array> → λ
