Backend/Syntax/RecursiveDescentParser.py
# Backend/Syntax/RecursiveDescentParser.py
"""
Recursive Descent Parser with AST for the L.O.V.E. language.

This is an alternative parser implementation using hand-written recursive descent
parsing instead of Lark. It produces an Abstract Syntax Tree (AST) representation
of the parsed program.
"""

from __future__ import annotations

from typing import List, Optional, Union, TYPE_CHECKING
from dataclasses import dataclass, field

# Avoid circular import by using TYPE_CHECKING
if TYPE_CHECKING:
    from Backend.Lexical.Lexer import Token, Lexer


# =============================================================================
# AST NODE CLASSES
# =============================================================================

@dataclass
class ASTNode:
    """Base class for all AST nodes."""
    line: int = 1
    column: int = 1


# =============================================================================
# Program Structure
# =============================================================================

@dataclass
class Program(ASTNode):
    """Root node: boundaries_opt global_declaration sub_func love() { body_func }"""
    namespace: Optional[Namespace] = None
    global_declarations: List[Declaration] = field(default_factory=list)
    sub_functions: List[Function] = field(default_factory=list)
    main_function: MainFunction = None


@dataclass
class Namespace(ASTNode):
    """Namespace: boundaries id { ... }"""
    name: str = ""
    global_declarations: List[Declaration] = field(default_factory=list)
    sub_functions: List[Function] = field(default_factory=list)


@dataclass
class MainFunction(ASTNode):
    """Main function: love() { body_func }"""
    body: FunctionBody = None


# =============================================================================
# Declarations
# =============================================================================

@dataclass
class Declaration(ASTNode):
    """Variable declaration: data_type id [array_decl] [= expr] [multi_decl];"""
    data_type: str = ""  # "dear", "dearest", "rant", "status"
    identifier: str = ""
    array_dimensions: int = 0  # Number of [] pairs
    initial_value: Optional[Expression] = None
    is_const: bool = False
    multi_declarations: List[MultiDeclaration] = field(default_factory=list)


@dataclass
class MultiDeclaration(ASTNode):
    """Multiple declarations: , id [array_decl] [= expr]"""
    identifier: str = ""
    array_dimensions: int = 0
    initial_value: Optional[Expression] = None


# =============================================================================
# Functions
# =============================================================================

@dataclass
class Function(ASTNode):
    """Function: return_type id (parameters) { body_func }"""
    return_type: Optional[str] = None  # None for "avoidant" (void)
    name: str = ""
    parameters: List[Parameter] = field(default_factory=list)
    body: FunctionBody = None


@dataclass
class Parameter(ASTNode):
    """Function parameter: data_type id [array_decl]"""
    data_type: str = ""
    identifier: str = ""
    array_dimensions: int = 0


@dataclass
class FunctionBody(ASTNode):
    """Function body: local_decl_list statements"""
    local_declarations: List[Declaration] = field(default_factory=list)
    statements: List[Statement] = field(default_factory=list)


# =============================================================================
# Statements
# =============================================================================

@dataclass
class Statement(ASTNode):
    """Base class for all statements."""
    pass


@dataclass
class AssignmentStatement(Statement):
    """Assignment: id [index_array] assign_op expr;"""
    identifier: str = ""
    array_indices: List[Expression] = field(default_factory=list)
    operator: str = "="  # "=", "+=", "-=", "*=", "/=", "%="
    value: Expression = None


@dataclass
class FunctionCallStatement(Statement):
    """Function call: id [::id] (arguments);"""
    identifier: str = ""
    namespace: Optional[str] = None
    arguments: List[Expression] = field(default_factory=list)


@dataclass
class UnaryStatement(Statement):
    """Unary operation: ++id; or --id; or id++; or id--;"""
    operator: str = ""  # "++" or "--"
    identifier: str = ""
    is_prefix: bool = True  # True for ++x, False for x++


@dataclass
class InputStatement(Statement):
    """Input: give >> id; or overshare(id);"""
    method: str = ""  # "give" or "overshare"
    identifier: str = ""


@dataclass
class OutputStatement(Statement):
    """Output: express << value [<< value ...] [<< periodt];"""
    values: List[Union[Expression, str]] = field(default_factory=list)  # str for "periodt"


@dataclass
class ReturnStatement(Statement):
    """Return: comeback [expr];"""
    value: Optional[Expression] = None


@dataclass
class IfStatement(Statement):
    """If: forever (expr) { body } [forevermore ...] [more { body }]"""
    condition: Expression = None
    then_body: FunctionBody = None
    elif_clauses: List[ElifClause] = field(default_factory=list)
    else_body: Optional[FunctionBody] = None


@dataclass
class ElifClause(ASTNode):
    """Else-if: forevermore (expr) { body }"""
    condition: Expression = None
    body: FunctionBody = None


@dataclass
class WhileStatement(Statement):
    """While: while (expr) { body }"""
    condition: Expression = None
    body: FunctionBody = None


@dataclass
class DoWhileStatement(Statement):
    """Do-while: pursue (expr) { body }"""
    condition: Expression = None
    body: FunctionBody = None


@dataclass
class ForStatement(Statement):
    """For: for (init; condition; update) { body }"""
    init: Optional[ForInit] = None
    condition: Optional[Expression] = None
    update: Optional[ForUpdate] = None
    body: FunctionBody = None


@dataclass
class ForInit(ASTNode):
    """For initialization: [data_type] id = expr"""
    data_type: Optional[str] = None
    identifier: str = ""
    value: Expression = None


@dataclass
class ForUpdate(ASTNode):
    """For update: id assign_op expr | id unary_op | unary_op id"""
    identifier: str = ""
    operator: str = ""  # "=", "+=", "-=", "*=", "/=", "%=", "++", "--"
    value: Optional[Expression] = None  # None for unary operations
    is_prefix: bool = True  # For unary operations


@dataclass
class SwitchStatement(Statement):
    """Switch: choose (expr) { phase ... [bareminimum ...] }"""
    expression: Expression = None
    cases: List[CaseClause] = field(default_factory=list)
    default_case: Optional[FunctionBody] = None


@dataclass
class CaseClause(ASTNode):
    """Case: phase const : body breakup;"""
    value: Union[int, float, str] = None  # Literal value
    body: FunctionBody = None


# =============================================================================
# Expressions
# =============================================================================

@dataclass
class Expression(ASTNode):
    """Base class for all expressions."""
    pass


@dataclass
class BinaryExpression(Expression):
    """Binary operation: left op right"""
    operator: str = ""
    left: Expression = None
    right: Expression = None


@dataclass
class UnaryExpression(Expression):
    """Unary operation: op expr"""
    operator: str = ""
    operand: Expression = None


@dataclass
class IdentifierExpression(Expression):
    """Identifier: id [index_array]"""
    name: str = ""
    array_indices: List[Expression] = field(default_factory=list)


@dataclass
class FunctionCallExpression(Expression):
    """Function call in expression: id [::id] (arguments)"""
    identifier: str = ""
    namespace: Optional[str] = None
    arguments: List[Expression] = field(default_factory=list)


@dataclass
class LiteralExpression(Expression):
    """Literal: int, float, string, or bool"""
    value: Union[int, float, str, bool] = None
    literal_type: str = ""  # "int", "float", "string", "bool"


@dataclass
class ParenthesizedExpression(Expression):
    """Parenthesized: (expr)"""
    expression: Expression = None


# =============================================================================
# RECURSIVE DESCENT PARSER
# =============================================================================

class ParseError(Exception):
    """Exception raised when parsing fails."""
    def __init__(self, message: str, token: Optional["Token"] = None):
        super().__init__(message)
        self.message = message
        self.token = token
        self.line = token.line if token else 1
        self.column = token.column if token else 1


class RecursiveDescentParser:
    """
    Hand-written Recursive Descent Parser for L.O.V.E. language.
    
    The grammar is designed for LL(1) parsing with right-recursion for expressions.
    """
    
    # Keywords that can start statements
    STATEMENT_KEYWORDS = {
        "give", "overshare", "express", "forever", "while", 
        "pursue", "for", "comeback", "choose"
    }
    
    # All language keywords for typo detection
    ALL_KEYWORDS = {
        "love", "boundaries", "const", "avoidant", "comeback",
        "dear", "dearest", "rant", "status", "forever", "forevermore",
        "more", "choose", "phase", "bareminimum", "for", "while",
        "pursue", "breakup", "give", "express", "overshare", "periodt",
        "greenflag", "redflag", "moveon"
    }
    
    def __init__(self, lexer: "Lexer"):
        """
        Initialize parser with a lexer.
        
        Args:
            lexer: Lexer instance that produces tokens
        """
        # Import here to avoid circular dependency
        from Backend.Lexical.Lexer import Token, Lexer as LexerType
        self.lexer = lexer
        self.tokens: List["Token"] = []
        self.current_index = 0
        self.errors: List[ParseError] = []
    
    def parse(self) -> Program:
        """
        Parse the program and return the AST.
        
        Returns:
            Program AST node
            
        Raises:
            ParseError: If parsing fails
        """
        # Import here to avoid circular dependency
        from Backend.Lexical.Lexer import Token
        
        # Tokenize the entire source
        self.tokens = []
        try:
            self.tokens = self.lexer.scan_tokens()
        except Exception as e:
            raise ParseError(f"Lexical error: {e}")
        
        # Filter out NEWLINE tokens (like Lark's custom lexer does)
        # But keep them for now to help with debugging - we'll skip them during parsing
        # Actually, let's keep them but skip them in parsing methods
        
        # Ensure EOF token exists
        if not self.tokens or self.tokens[-1].kind != "EOF":
            eof_token = Token(kind="EOF", lexeme="", line=self.tokens[-1].line if self.tokens else 1, column=1)
            self.tokens.append(eof_token)
        
        self.current_index = 0
        self.errors = []
        
        # Skip any leading whitespace
        self._skip_whitespace()
        
        # Parse program
        program = self._parse_program()
        
        # Check for errors
        if self.errors:
            error_msg = "\n".join([f"Line {e.line}:{e.column} - {e.message}" for e in self.errors])
            raise ParseError(f"Parse errors:\n{error_msg}")
        
        return program
    
    def parse_with_recovery(self) -> tuple[Optional[Program], List[ParseError]]:
        """
        Parse the program with error recovery to collect multiple errors.
        
        Returns:
            Tuple of (program, errors) where program may be None if parsing failed,
            and errors is a list of all ParseError objects found.
        """
        # Import here to avoid circular dependency
        from Backend.Lexical.Lexer import Token
        
        # Tokenize the entire source
        self.tokens = []
        try:
            self.tokens = self.lexer.scan_tokens()
        except Exception as e:
            error = ParseError(f"Lexical error: {e}", None)
            return None, [error]
        
        # Ensure EOF token exists
        if not self.tokens or self.tokens[-1].kind != "EOF":
            eof_token = Token(kind="EOF", lexeme="", line=self.tokens[-1].line if self.tokens else 1, column=1)
            self.tokens.append(eof_token)
        
        self.current_index = 0
        self.errors = []
        
        # Skip any leading whitespace
        self._skip_whitespace()
        
        # Try to parse with recovery
        program = None
        try:
            program = self._parse_program_with_recovery()
        except Exception as e:
            # If we get an unexpected exception, create an error for it
            if not isinstance(e, ParseError):
                error = ParseError(f"Unexpected error: {e}", self._current_token())
                self.errors.append(error)
        
        # Debug: Print errors collected
        import sys
        if len(self.errors) > 0:
            print(f"[DEBUG parse_with_recovery] Collected {len(self.errors)} errors:", file=sys.stderr)
            for i, err in enumerate(self.errors, 1):
                print(f"  Error {i}: Line {err.line}:{err.column} - {err.message[:80]}", file=sys.stderr)
        
        return program, self.errors
    
    # =========================================================================
    # Token Management
    # =========================================================================
    
    def _current_token(self) -> Optional["Token"]:
        """Get current token."""
        if self.current_index < len(self.tokens):
            return self.tokens[self.current_index]
        return None
    
    def _peek_token(self, offset: int = 1) -> Optional["Token"]:
        """Peek at token ahead."""
        idx = self.current_index + offset
        if idx < len(self.tokens):
            return self.tokens[idx]
        return None
    
    def _advance(self) -> Optional["Token"]:
        """Advance to next token."""
        if self.current_index < len(self.tokens):
            self.current_index += 1
        return self._current_token()
    
    def _match(self, expected_kind: str) -> bool:
        """Check if current token matches expected kind."""
        token = self._current_token()
        if token and token.kind == expected_kind:
            return True
        return False
    
    def _find_similar_keyword(self, word: str, max_distance: int = 2) -> Optional[str]:
        """
        Find a keyword similar to the given word (for typo detection).
        Uses Levenshtein distance.
        
        Args:
            word: The word to find similar keywords for
            max_distance: Maximum edit distance to consider
            
        Returns:
            The most similar keyword, or None if none found
        """
        word_lower = word.lower()
        
        # Exact match
        if word_lower in self.ALL_KEYWORDS:
            return word_lower
        
        # Calculate Levenshtein distance
        def levenshtein(s1: str, s2: str) -> int:
            if len(s1) < len(s2):
                return levenshtein(s2, s1)
            if len(s2) == 0:
                return len(s1)
            
            previous_row = list(range(len(s2) + 1))
            for i, c1 in enumerate(s1):
                current_row = [i + 1]
                for j, c2 in enumerate(s2):
                    insertions = previous_row[j + 1] + 1
                    deletions = current_row[j] + 1
                    substitutions = previous_row[j] + (c1 != c2)
                    current_row.append(min(insertions, deletions, substitutions))
                previous_row = current_row
            return previous_row[-1]
        
        best_match = None
        best_distance = max_distance + 1
        
        for keyword in self.ALL_KEYWORDS:
            distance = levenshtein(word_lower, keyword)
            if distance < best_distance:
                best_distance = distance
                best_match = keyword
        
        return best_match if best_match else None
    
    def _consume(self, expected_kind: str, error_msg: Optional[str] = None, context: Optional[str] = None, recover: bool = False) -> Optional["Token"]:
        """
        Consume token of expected kind with enhanced error messages.
        
        Args:
            expected_kind: Expected token kind
            error_msg: Custom error message
            context: Context about what we're parsing (e.g., "statement", "expression", "declaration")
            recover: If True, record error and return None instead of raising (for error recovery)
            
        Returns:
            The consumed token, or None if recover=True and token doesn't match
            
        Raises:
            ParseError: If token doesn't match and recover=False
        """
        token = self._current_token()
        if not token:
            msg = error_msg or f"Unexpected end of input, expected {expected_kind}"
            error = ParseError(msg, self.tokens[-1] if self.tokens else None)
            if recover:
                self.errors.append(error)
                return None
            raise error
        
        if token.kind == expected_kind:
            self._advance()
            return token
        
        # Build enhanced error message
        found_lexeme = token.lexeme
        found_kind = token.kind
        
        # If we found an identifier that looks like a keyword typo
        suggestion = None
        if found_kind == "id" and found_lexeme:
            suggestion = self._find_similar_keyword(found_lexeme)
        
        # Build the error message
        if error_msg:
            msg = error_msg
        else:
            # Create a user-friendly message
            possible_terminals = []
            if context:
                # Get all possible terminals based on CFG structure
                possible_terminals = self._get_all_possible_terminals(context)
                if possible_terminals:
                    # Format the possible terminals nicely
                    terminal_names = [self._format_expected_token(t).strip("'") for t in possible_terminals]
                    terminals_str = ", ".join(terminal_names)
                    msg = f"Unexpected token '{found_lexeme}' while parsing {context}. Expected one of: {terminals_str}"
                else:
                    # Fallback to CFG suggestion
                    context_suggestion = self._get_cfg_suggestion(context, expected_kind)
                    if context_suggestion:
                        msg = f"Unexpected token '{found_lexeme}' while parsing {context}. {context_suggestion}"
                    else:
                        msg = f"Unexpected token '{found_lexeme}' while parsing {context}"
            else:
                msg = f"Unexpected token '{found_lexeme}'"
            
            # Add what was expected (if not already included in possible_terminals list)
            if not possible_terminals:
                expected_display = self._format_expected_token(expected_kind)
                msg += f". Expected {expected_display}"
            
            # Add suggestion if we found a similar keyword
            if suggestion and suggestion != found_lexeme.lower():
                msg += f". Did you mean '{suggestion}'?"
        
        error = ParseError(msg, token)
        self.errors.append(error)
        
        if recover:
            return None
        raise error
    
    def _get_cfg_suggestion(self, context: str, expected_kind: str) -> Optional[str]:
        """
        Suggest all possible terminals that can come next based on CFG structure.
        
        Args:
            context: Current parsing context (e.g., "output statement", "after <<", "id_suffix")
            expected_kind: The expected token kind
            
        Returns:
            A suggestion string listing all possible terminals, or None
        """
        context_lower = context.lower()
        
        # After << in output statement: can be <expr> or periodt (Rule 71, 72)
        if "after <<" in context_lower or ("output" in context_lower and expected_kind in ["periodt", "id", "LPAREN", "dear_lit", "dearest_lit", "rant_lit", "greenflag", "redflag"]):
            return "Expected an expression or 'periodt'"
        
        # After express: must be << (Rule 68)
        if "output statement" in context_lower and expected_kind == "OP_LSHIFT":
            return "Expected '<<' (output operator)"
        
        # After identifier in statement: can be various things (Rule 48-51)
        if "id_suffix" in context_lower or ("statement" in context_lower and expected_kind in ["LPAREN", "ASSIGN", "OP_PLUS_ASSIGN", "OP_MINUS_ASSIGN", "OP_MUL_ASSIGN", "OP_DIV_ASSIGN", "OP_MOD_ASSIGN", "OP_INC", "OP_DEC", "LBRACKET", "SEMICOLON"]):
            return "Expected '(', '=', '+=', '-=', '*=', '/=', '%=', '++', '--', '[', or ';'"
        
        # After identifier in function call: can be arguments or empty (Rule 50)
        if "arguments" in context_lower or (expected_kind == "RPAREN" and self._peek_token(-1) and self._peek_token(-1).kind == "LPAREN"):
            return "Expected an expression or ')'"
        
        # In expression: can be various terminals (Rule 74-106)
        if "expression" in context_lower:
            return "Expected an expression (identifier, literal, '(', or function call)"
        
        # After data type in declaration: must be identifier (Rule 9, 37)
        if "declaration" in context_lower and expected_kind == "id":
            return "Expected an identifier"
        
        # After identifier in declaration: can be array_decl, =, or ; (Rule 9)
        if "declaration" in context_lower and expected_kind in ["LBRACKET", "ASSIGN", "SEMICOLON"]:
            return "Expected '[', '=', or ';'"
        
        # In statement list: can be various statements (Rule 38-46)
        if "statement" in context_lower and "id_suffix" not in context_lower:
            return "Expected a statement (express, give, overshare, forever, while, pursue, for, comeback, choose, identifier, or unary operator)"
        
        # In declaration: can be data types (Rule 24-27)
        if "declaration" in context_lower and expected_kind in ["dear", "dearest", "rant", "status"]:
            return "Expected a data type (dear, dearest, rant, or status)"
        
        return None
    
    def _get_all_possible_terminals(self, context: str) -> List[str]:
        """
        Get all possible terminal tokens that can come next based on CFG structure.
        
        Args:
            context: Current parsing context/state
            
        Returns:
            List of possible terminal token kinds
        """
        context_lower = context.lower()
        possible = []
        
        # After << in output: expr or periodt (Rule 71, 72)
        if "after <<" in context_lower or ("output" in context_lower and "after" in context_lower):
            possible.extend(["periodt", "id", "LPAREN", "dear_lit", "dearest_lit", "rant_lit", "greenflag", "redflag", "MINUS", "NOT"])
            return possible
        
        # After express: must be <<
        if "output statement" in context_lower and "after express" in context_lower:
            return ["OP_LSHIFT"]
        
        # After identifier in statement: id_suffix options (Rule 48-51)
        if "id_suffix" in context_lower or ("statement" in context_lower and "after id" in context_lower):
            possible.extend(["LPAREN", "ASSIGN", "OP_PLUS_ASSIGN", "OP_MINUS_ASSIGN", "OP_MUL_ASSIGN", 
                           "OP_DIV_ASSIGN", "OP_MOD_ASSIGN", "OP_INC", "OP_DEC", "LBRACKET", "SEMICOLON"])
            return possible
        
        # In expression: can start with various terminals
        if "expression" in context_lower:
            possible.extend(["id", "LPAREN", "dear_lit", "dearest_lit", "rant_lit", "greenflag", "redflag", "MINUS", "NOT"])
            return possible
        
        # After data type: identifier
        if "declaration" in context_lower and "after data_type" in context_lower:
            return ["id"]
        
        # In statement list
        if "statement" in context_lower:
            possible.extend(["express", "give", "overshare", "forever", "while", "pursue", "for", 
                           "comeback", "choose", "id", "OP_INC", "OP_DEC"])
            return possible
        
        return possible
    
    def _find_sync_point(self) -> bool:
        """
        Find synchronization point after an error (panic mode recovery).
        Skips tokens until we find a safe point to resume parsing.
        
        Returns:
            True if sync point found, False if we've reached EOF
        """
        # Sync points: semicolon, closing brace, keywords that start statements
        sync_tokens = {"SEMICOLON", "RBRACE", "LBRACE"}
        sync_keywords = {"love", "give", "overshare", "express", "forever", "while", 
                        "pursue", "for", "comeback", "choose", "dear", "dearest", 
                        "rant", "status", "avoidant"}
        
        while self._current_token() and self._current_token().kind != "EOF":
            token = self._current_token()
            
            # Check for sync tokens
            if token.kind in sync_tokens:
                # Found a sync point - don't consume it, let the caller handle it
                return True
            
            # Check for sync keywords
            if token.kind in sync_keywords or (token.kind == "id" and token.lexeme.lower() in sync_keywords):
                return True
            
            # Skip this token
            self._advance()
            self._skip_whitespace()
        
        return False
    
    def _format_expected_token(self, token_kind: str) -> str:
        """Format expected token kind for display."""
        # Map token kinds to readable names
        token_display = {
            "id": "an identifier",
            "express": "'express'",
            "give": "'give'",
            "overshare": "'overshare'",
            "forever": "'forever'",
            "while": "'while'",
            "for": "'for'",
            "pursue": "'pursue'",
            "comeback": "'comeback'",
            "choose": "'choose'",
            "periodt": "'periodt'",
            "LPAREN": "'('",
            "RPAREN": "')'",
            "LBRACE": "'{'",
            "RBRACE": "'}'",
            "LBRACKET": "'['",
            "RBRACKET": "']'",
            "SEMICOLON": "';'",
            "COMMA": "','",
            "ASSIGN": "'='",
            "dear_lit": "an integer literal",
            "dearest_lit": "a float literal",
            "rant_lit": "a string literal",
            "greenflag": "'greenflag'",
            "redflag": "'redflag'",
            "MINUS": "'-'",
            "NOT": "'!'",
            "OP_LSHIFT": "'<<'",
            "OP_PLUS_ASSIGN": "'+='",
            "OP_MINUS_ASSIGN": "'-='",
            "OP_MUL_ASSIGN": "'*='",
            "OP_DIV_ASSIGN": "'/='",
            "OP_MOD_ASSIGN": "'%='",
            "OP_INC": "'++'",
            "OP_DEC": "'--'",
        }
        return token_display.get(token_kind, f"'{token_kind}'")
    
    def _consume_optional(self, expected_kind: str) -> Optional["Token"]:
        """Try to consume token, return None if not found."""
        if self._match(expected_kind):
            return self._consume(expected_kind)
        return None
    
    def _skip_whitespace(self):
        """Skip NEWLINE and other whitespace tokens."""
        while self._match("NEWLINE"):
            self._advance()
    
    # =========================================================================
    # Program Structure
    # =========================================================================
    
    def _parse_program(self) -> Program:
        """Parse: boundaries_opt global_declaration sub_func love() { body_func }"""
        line = self._current_token().line if self._current_token() else 1
        col = self._current_token().column if self._current_token() else 1
        
        # Parse optional namespace
        namespace = self._parse_namespace()
        
        # Parse global declarations
        global_decls = []
        while self._match("dear") or self._match("dearest") or self._match("rant") or \
              self._match("status") or self._match("const"):
            global_decls.append(self._parse_declaration())
        
        # Parse sub functions
        sub_funcs = []
        while self._match("dear") or self._match("dearest") or self._match("rant") or \
              self._match("status") or self._match("avoidant"):
            sub_funcs.append(self._parse_sub_function())
        
        # Parse main function
        self._consume("love", "Expected 'love' keyword for main function")
        
        # Check if structure is incomplete and provide helpful suggestion
        if not self._match("LPAREN"):
            next_token = self._current_token()
            if next_token:
                msg = f"Expected '(' after 'love'. Complete structure: love () {{ ... }}"
            else:
                msg = "Expected '(' after 'love'. Complete structure: love () { ... }"
            error = ParseError(msg, next_token)
            self.errors.append(error)
            raise error
        
        self._consume("LPAREN", context="main function after love")
        
        if not self._match("RPAREN"):
            next_token = self._current_token()
            msg = f"Expected ')' after '('. Complete structure: love () {{ ... }}"
            error = ParseError(msg, next_token)
            self.errors.append(error)
            raise error
        
        self._consume("RPAREN", context="main function")
        self._skip_whitespace()  # Skip whitespace after )
        
        if not self._match("LBRACE"):
            next_token = self._current_token()
            if next_token and next_token.kind != "EOF":
                msg = f"Expected '{{' after 'love ()'. Found '{next_token.lexeme}' instead. Complete structure: love () {{ ... }}"
            else:
                msg = "Expected '{' after 'love ()'. Complete structure: love () { ... }"
            error = ParseError(msg, next_token)
            self.errors.append(error)
            raise error
        
        self._consume("LBRACE", context="main function")
        self._skip_whitespace()  # Skip newlines after opening brace
        main_body = self._parse_function_body()
        
        # Check for missing closing brace
        if not self._match("RBRACE"):
            next_token = self._current_token()
            if next_token and next_token.kind != "EOF":
                msg = f"Expected '}}' to close 'love () {{' function. Found '{next_token.lexeme}' instead"
            else:
                msg = "Expected '}' to close 'love () {' function. Reached end of input"
            error = ParseError(msg, next_token)
            self.errors.append(error)
            raise error
        
        self._consume("RBRACE", context="main function")
        
        main_func = MainFunction(body=main_body, line=line, column=col)
        
        return Program(
            namespace=namespace,
            global_declarations=global_decls,
            sub_functions=sub_funcs,
            main_function=main_func,
            line=line,
            column=col
        )
    
    def _parse_program_with_recovery(self) -> Optional[Program]:
        """
        Parse program with error recovery to collect multiple errors.
        """
        line = self._current_token().line if self._current_token() else 1
        col = self._current_token().column if self._current_token() else 1
        
        # Parse optional namespace (with recovery)
        namespace = None
        try:
            namespace = self._parse_namespace()
        except ParseError:
            # Error already recorded, try to recover
            self._find_sync_point()
        
        # Parse global declarations (with recovery)
        global_decls = []
        while not self._match("EOF"):
            self._skip_whitespace()
            if self._match("dear") or self._match("dearest") or self._match("rant") or \
               self._match("status") or self._match("const"):
                try:
                    global_decls.append(self._parse_declaration())
                except ParseError:
                    # Error recorded, skip to next declaration or function
                    if not self._find_sync_point():
                        break
            elif self._match("dear") or self._match("dearest") or self._match("rant") or \
                 self._match("status") or self._match("avoidant") or self._match("love"):
                # Start of function or main - break
                break
            else:
                break
        
        # Parse sub functions (with recovery)
        sub_funcs = []
        while not self._match("EOF"):
            self._skip_whitespace()
            if self._match("dear") or self._match("dearest") or self._match("rant") or \
               self._match("status") or self._match("avoidant"):
                try:
                    sub_funcs.append(self._parse_sub_function())
                except ParseError:
                    # Error recorded, skip to next function or main
                    if not self._find_sync_point():
                        break
            elif self._match("love"):
                # Start of main function - break
                break
            else:
                break
        
        # Parse main function (with recovery)
        main_func = None
        try:
            # Try to consume "love" - check for typo first
            if self._match("id"):
                # Might be a typo for "love"
                suggestion = self._find_similar_keyword(self._current_token().lexeme)
                if suggestion == "love":
                    # It's a typo - record error and continue
                    token = self._current_token()
                    msg = f"Unexpected identifier '{token.lexeme}'. Did you mean 'love'?"
                    error = ParseError(msg, token)
                    self.errors.append(error)
                    self._advance()  # Skip the typo
                elif not self._match("love"):
                    # Not love and not a typo - record error and try to recover
                    token = self._current_token()
                    msg = f"Expected 'love' keyword for main function, found '{token.lexeme}'"
                    error = ParseError(msg, token)
                    self.errors.append(error)
                    if not self._find_sync_point():
                        return None
            elif not self._match("love"):
                # Expected love but didn't find it
                token = self._current_token()
                if token:
                    msg = f"Expected 'love' keyword for main function, found '{token.lexeme}'"
                    error = ParseError(msg, token)
                    self.errors.append(error)
                if not self._find_sync_point():
                    return None
            
            # Consume love if we have it
            if self._match("love"):
                self._consume("love")
                
                # Check if structure is incomplete and provide helpful suggestion
                self._skip_whitespace()
                if not self._match("LPAREN"):
                    next_token = self._current_token()
                    if next_token and next_token.kind != "EOF":
                        msg = f"Expected '(' after 'love'. Complete structure: love () {{ ... }}"
                    else:
